fixed the CSS file (imaes were not showing up

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background: url("rps.png") no-repeat center center fixed;
+  background: url("images/rps.png") no-repeat center center fixed;
   background-size: cover;
 }
 
@@ -80,7 +80,7 @@ body,html {
   text-align: center;
   /* color: white; */
   /* background: rgba(0,0,0,0.4); */
-  background: url(rock.png) no-repeat center;
+  background: url("images/rock.png") no-repeat center;
   background-size: 100%;
   text-shadow: 0 0 .5rem black;
 }
@@ -97,7 +97,7 @@ body,html {
   text-align: center;
   /* color: white; */
   /* background: rgba(0,0,0,0.4); */
-  background: url(paper.png) no-repeat center;
+  background: url("images/paper.png") no-repeat center;
   background-size: 100%;
   text-shadow: 0 0 .5rem black;
 }
@@ -114,7 +114,7 @@ body,html {
   text-align: center;
   /* color: white; */
   /* background: rgba(0,0,0,0.4); */
-  background: url(scissors.png) no-repeat center;
+  background: url("images/scissors.png") no-repeat center;
   background-size: 100%;
   text-shadow: 0 0 .5rem black;
 }
